// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl iCvzgk"
    >
      <h1
        class="sc-gswNZR fEnHfq sc-kDvujY jlGjEY"
      >
        Admin
      </h1>
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <a
        aria-label="Site status"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/status"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Site status
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Debug settings"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/debug"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Debug settings
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/analytics"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/emails"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/notifications"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="sc-dmctIk dyqBmO sc-bYMpWt fnZNKQ admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/users"
      >
        <div
          class="sc-kgTSHT eWpXqd"
        >
          <div
            class="sc-fLcnxK cUOGbq"
          />
          <div
            class="sc-bBABsx kLHrUJ"
          >
            <div
              aria-hidden="true"
              class="sc-kMjNwy cmaPuj"
            >
              <div
                class="sc-ilhmMj fwSest date container"
              />
              <div
                class="sc-jIRcFI hPSbcn"
              >
                <h1
                  class="sc-dkrFOg dYiSba"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-hLBbgP hxBBAy sc-bjfHbI iYWdbA"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bcXHqe kEjsPc page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-bcXHqe dKDSeC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hBxehG julUME"
    >
      <h1
        class="sc-dkrFOg dYiSba sc-bjfHbI cBkNPA"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-cabOPr kwUuzT"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-ftTHYK dpmGDG"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
